syntax = "proto3";

package cosipbft;

import "google/protobuf/any.proto";

message ForwardLinkProto {
    bytes from = 1;
    bytes to = 2;
    google.protobuf.Any prepare = 3;
    google.protobuf.Any commit = 4;
}

message PrepareSignatureRequest {
    bytes from = 1;
    google.protobuf.Any proposal = 2;
}
